More minor layout fixes on small screens

--- a/styles.css
+++ b/styles.css
@@ -1407,7 +1407,7 @@ body {
     }
 
     #menu-container {
-        top: 3.3em;
+        top: 2.3em;
         height: 706%;
     }
 
